2011-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-update-info): Refactor slightly.

2011-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-finish-retrieve-group-infos): Protect against the first
	part not returning any data.

	* proto-stream.el (open-protocol-stream): Document the return value.

2011-02-06  Julien Danjou  <julien@danjou.info>

	* message.el (message-setup-1): Handle message-generate-headers-first
	set to t.

2011-02-04  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-setup-1): Remove the read-only stuff, since it
	doesn't work under XEmacs, for some reason.

	* gnus-sum.el (gnus-user-date): Renamed back from
	gnus-summary-user-date since user code refers to it.

	* shr.el (shr-render-td): Store the actual background colour used.

	* message.el (message-setup-1): Don't bind the constant
	-forbidden-properties.
	(message-setup-1): Revert previous change, since it needs to bind the
	props to insert them.
	(message-resend): Allow removing the read-only separator line.

2011-02-03  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-accept-article): Give an error message if
	the APPEND wasn't successful.

2011-02-03  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-start.el (gnus-get-unread-articles): Fix the call to methods
	that have no groups.

2011-02-03  Julien Danjou  <julien@danjou.info>

	* gnus-draft.el: Remove progn around gnus-draft-setup.

2011-02-03  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-read-active-for-groups): This function is never
	called with a nil `infos', so clean that up.
	(gnus-get-unread-articles): Request active files from primary/secondary
	methods that have no groups (yet).

2011-02-03  Julien Danjou  <julien@danjou.info>

	* message.el (message-setup-1): Always generate References first.
	(message-mail): Return the return value of message-setup, not always t.
	(message-setup-1): Insert mail-header-separator with read-only and
	intangible properties set.
