@@ -1,6 +1,7 @@
 2011-02-07  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-update-info): Refactor slightly.
+	(nnimap-update-info): Tell Gnus whether there are any \Recent messages.
 
 2011-02-06  Lars Ingebrigtsen  <larsi@gnus.org>
 
